clusters/casper/production/sfc/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfc
  namespace: production
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.sfc: semver:*
spec:
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: sfc
  template:
    metadata:
      labels:
        app: sfc
    spec:
      containers:
      - name: sfc
        image: docker.pkg.github.com/uhthomas/sfc/sfc:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 2Mi
            cpu: 2m
          limits:
            memory: 8Mi
            cpu: 5m
      imagePullSecrets:
      - name: regcred
