clusters/casper/production/sfc/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sfc
  namespace: production
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: sfc
